# malheur

./: .gitignore  CHANGES  Makefile.am  README  README.md  README.textile  TODO  bootstrap  compile  configure.ac  configure.in  git2changes.py  malheur.komodoproject  mrproper  pedantic
data/: 20090801.csv  20090802.csv  20090803.csv  README.md  clusterrun_1.txt  clusterrun_2.txt  clusterrun_3.txt  clusterrun_4.txt  clusterrun_5.txt  clusterrun_6.txt  clusterrun_7.txt  refset_clustering.txt
doc/: Makefile.am  README.md  doxygen.cfg  example.cfg  git2changes.py  latex-pre.inc.in  malheur.cfg  malheur.man  malheur.man.in  malheur.pod  malheur.pod.in  modules
m4/: ac_openmp.m4  matlab.m4  matlabarch.m4  matlabdir.m4  matlabver.m4  mex.m4  mexext.m4  mexopt.m4  openmp.m4
matlab/: Makefile.am  mal_analyse.m  mal_distance.m  mal_dot_product.m  mal_jaccard.m  mal_kernel.m  mal_load_mist.m  mal_ncd.m  mal_prototype.m  malheur.c  malheur.m  malheur_load.m  malmex.c  malmex.h
netbeans/nbproject/: Makefile-Default.mk  Makefile-impl.mk  Package-Default.bash  configurations.xml  project.xml
netbeans/nbproject/private/: configurations.xml
src/: Makefile.am  class.c  class.h  classify.c  classify.h  cluster.c  cluster.h  common.h  data.c  data.h  eval.c  eval.h  export.c  export.h  farray.c  farray.h  fhash.c  fhash.h  fio.c  fio.h  fmath.c  fmath.h  ftable.c  ftable.h  fvec.c  fvec.h  fvect.c  fvect.h  io.c  io.h  malheur.c  malheur.h  malheur.h.in  mconfig.c  mconfig.h  md5.c  md5.h  mist.c  mist.h  murmur.c  (+10 more)
test/: Makefile.am  fhash.c
tests/: Makefile.am  fhash.c  ftable.c  fvec.c  test_class.c  test_classify.c  test_cluster.c  test_eval.c  test_farray.c  test_fmath.c  test_ftable.c  test_fvec.c  test_proto.c  test_quality.c  tests.c  tests.h  tfarray.c  tfmath.c  tftable.c  tfvec.c  tfvect.c
