#
# MALHEUR - Automatic Malware Analysis on Steroids
# Copyright (c) 2009 Konrad Rieck (rieck@cs.tu-berlin.de)
# Berlin Institute of Technology (TU Berlin).
# --
#

INCLUDES 	     = @INCLUDES@ -I$(top_srcdir)/src 
TESTS    	     = fhash

noinst_PROGRAMS      = $(TESTS)

fhash_SOURCES        = fhash.c
